pihole-svc lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-dns
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole-app
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
