pihole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
