pihole-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
    - host: pihole.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-service
                port:
                  number: 80
